[package]
name = "wta-executor"
version = "0.1.0"
edition = "2021"
description = "Executor for the what-the-async runtime"
license = "MIT"
repository = "https://github.com/conradludgate/what-the-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossbeam-deque = "0.8.1"
crossbeam-deque = { git = "https://github.com/kvark/crossbeam", branch = "loom"}

[target.'cfg(loom)'.dependencies]
loom = "0.5"
crossbeam-deque = { git = "https://github.com/kvark/crossbeam", branch = "loom", features = ["loom"] }
