[package]
name = "wta-reactor"
version = "0.1.0"
edition = "2021"
description = "Reactor for the what-the-async runtime"
license = "MIT"
repository = "https://github.com/conradludgate/what-the-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io = ["mio", "sharded-slab", "tokio"]

[dependencies]
wta-executor = { version = "=0.1.0", path = "../executor" }
futures-io = "0.3"
futures-core = "0.3"

mio = { version = "0.8", features = ["os-poll", "net"], optional = true }
sharded-slab = { version = "0.1.4", optional = true }
tokio = { version = "1.19.2", default-features = false, features = ["sync"], optional = true }

[target.'cfg(loom)'.dependencies]
loom = "0.5"
