[package]
name = "wta-reactor"
version = "0.1.1"
edition = "2021"
description = "Reactor for the what-the-async runtime"
license = "MIT"
repository = "https://github.com/conradludgate/what-the-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mio = { version = "1", features = ["os-poll", "net"] }
sharded-slab = "0.1.4"
